# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

# Place model files for this example within their own group.
# We can use these models in other bazel projects by adding the depencency
# "//examples/bubble_gripper:bubble_gripper_models".
filegroup(
    name = "bubble_gripper_models",
    srcs = [
        "bubble_gripper.sdf",
        "simple_box.sdf",
    ],
    visibility = ["//visibility:public"],
)

drake_cc_binary(
    name = "bubble_gripper",
    srcs = ["bubble_gripper.cc"],
    add_test_rule = 1,
    data = [
        ":bubble_gripper_models",
        "icosphere.obj"
    ],
    test_rule_args = [
        "--integration_scheme=runge_kutta2",
        "--simulation_time=0.01",
        "--target_realtime_rate=0.0",
    ],
    test_rule_timeout = "moderate",
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:implicit_euler_integrator",
        "//systems/analysis:runge_kutta2_integrator",
        "//systems/analysis:runge_kutta3_integrator",
        "//systems/analysis:semi_explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:sine",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "bubble_lqr",
    srcs = ["bubble_lqr.cc"],
    add_test_rule = 1,
    data = [":bubble_gripper_models",
        "icosphere.obj"],
    test_rule_args = [
        "--integration_scheme=runge_kutta2",
        "--simulation_time=0.01",
        "--target_realtime_rate=0.0"],
    deps = [
        "//common:find_resource",
        "//common:is_approx_equal_abstol",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:implicit_euler_integrator",
        "//systems/analysis:runge_kutta2_integrator",
        "//systems/analysis:runge_kutta3_integrator",
        "//systems/analysis:semi_explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/controllers:linear_quadratic_regulator",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:sine",
        "@gflags",
    ],
)

add_lint_tests()
