# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

drake_cc_binary(
    name = "single_point_impact",
    srcs = ["single_point_impact.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "--duration=0.1",
    ],
    deps = [
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//common:add_text_logging_gflags",
        "//geometry:geometry_visualization",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "stiff_double_mass_spring",
    srcs = ["stiff_double_mass_spring.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "--duration=0.1",
    ],
    deps = [
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//common:add_text_logging_gflags",
        "//geometry:geometry_visualization",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "oscillating_belt",
    srcs = ["oscillating_belt.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "--duration=0.1",
    ],
    deps = [
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//common:add_text_logging_gflags",
        "//geometry:geometry_visualization",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "spheres_stack",
    srcs = ["spheres_stack.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "--duration=0.1",
    ],
    deps = [
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//common:add_text_logging_gflags",
        "//geometry:geometry_visualization",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "pile_of_objects",
    srcs = [
        "pile_of_objects.cc",
    ],
    add_test_rule = 1,
    test_rule_args = [
        "--simulation_time=0.1",
        "--target_realtime_rate=0.0",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:geometry_visualization",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/framework:diagram",
        "//systems/analysis:simulator_print_stats",
        "@gflags",
    ],
)

add_lint_tests()
