# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "write_meshes",
    srcs = ["write_meshes.cc"],
    hdrs = ["write_meshes.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//geometry/proximity:surface_mesh",
        "//geometry/proximity:volume_mesh",
    ],
)

drake_cc_binary(
    name = "volumetric_contact",
    srcs = ["volumetric_contact.cc"],
    deps = [
        ":write_meshes",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//math:geometric_transform",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:implicit_euler_integrator",
        "//systems/analysis:runge_kutta2_integrator",
        "//systems/analysis:runge_kutta3_integrator",
        "//systems/analysis:semi_explicit_euler_integrator",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:sine",
        "@gflags",
    ],
)

add_lint_tests()
